--- a/musicnextjs/package.json
+++ b/musicnextjs/package.json
@@ -12,7 +12,8 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
